fix: Corrige a configuração do checkout para buscar todo o histórico de commits

--- a/.github/workflows/validate-commits.yml
+++ b/.github/workflows/validate-commits.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Baixar o código
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Busca todo o histórico de todos os branches
 
     - name: Obter mensagens dos commits
       run: |
