feat: adicionar regex para ignorar commits de revert na validação de mensagens

--- a/.github/workflows/validate-commits.yml
+++ b/.github/workflows/validate-commits.yml
@@ -31,10 +31,19 @@ jobs:
         # Regex para identificar commits de merge comuns para ignorá-los
         merge_commit_regex='^Merge[[:space:]]'
 
+        # Regex para identificar commits de revert para ignorá-los
+        revert_commit_regex='^Revert[[:space:]]'
+
         while IFS= read -r commit; do
           # Ignorar commits de merge
           if [[ $commit =~ $merge_commit_regex ]]; then
             echo "Ignorando commit de merge: $commit"
+            continue
+          fi
+
+          # Ignorar commits de revert
+          if [[ $commit =~ $revert_commit_regex ]]; then
+            echo "Ignorando commit de revert: $commit"
             continue
           fi
 
