--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start": "serve dist/"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "serve": "^14.2.4",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
   }
