--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "keen-slider": "^6.8.6",
     "serve": "^14.2.4",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
