--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start": "serve dist/"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.1",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
     "keen-slider": "^6.8.6",
     "serve": "^14.2.4",
+    "sharp": "^0.34.2",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
   }
